--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1703,16 +1703,24 @@ span.checkbox {
   -webkit-box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.05);
           box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.05);
   border: 1px solid #e5e5e5;
-  padding: 10px 10px 40px;
+  padding: 10px;
   float: left;
   width: 31%;
   margin: 0 20px 18px 0;
   position: relative; }
+  .people-list .entry.main-form {
+    padding-bottom: 34px; }
   .people-list .entry .contact-settings {
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
-    font-size: 13px; }
+    font-size: 13px;
+    margin-bottom: 10px; }
+  .people-list .entry .contact-card {
+    display: block; }
+  .people-list .entry .people-form {
+    display: none; }
+  .people-list .entry.edit-mode .contact-card {
+    display: none; }
+  .people-list .entry.edit-mode .people-form {
+    display: block; }
 
 .people-list .people-form .form-input {
   width: 100%;
