--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -818,18 +818,39 @@ $tasklist_height : 36px;
     border-radius: 3px;
     box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.05);
     border: 1px solid darken($sidepanel_bg, 5%);
-    padding: $padding $padding $padding*4;
+    padding: $padding;
     float: left;
     width: 31%;
     margin: 0 20px $paddingLarge 0;
     position: relative;
 
-    .contact-settings {
-      position: absolute;
-      bottom: $padding;
-      left: $padding;
-      font-size: $font-size-sm;
+    &.main-form {
+      padding-bottom: 34px;
     }
+
+    .contact-settings {
+      font-size: $font-size-sm;
+      margin-bottom: $padding;
+    }
+
+    .contact-card {
+      display: block;
+    }
+
+    .people-form {
+      display: none;
+    }
+
+    &.edit-mode {
+      .contact-card {
+        display: none;
+      }
+
+      .people-form {
+        display: block;
+      }
+    }
+
   }
 
   .people-form {
